[gd_scene load_steps=2 format=1]

[ext_resource path="res://addons/net.kivano.groups/Content/GroupInfoWin/AddMethodPopup/AddMethodPopup.gd" type="Script" id=1]


[node name="AddMethodPopup" type="WindowDialog"]

anchor/left = 3
anchor/top = 3
anchor/right = 3
anchor/bottom = 3
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 193.0
margin/top = 75.0
margin/right = -192.0
margin/bottom = -62.0
popup/exclusive = false
window/title = "Define new group method"
script/script = ExtResource( 1 )

[node name="methodName" type="TextEdit" parent="."]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 7.0
margin/top = 15.0
margin/right = 380.0
margin/bottom = 44.0
show_line_numbers = false
highlight_all_occurrences = false
caret/block_caret = false
caret/caret_blink = false
caret/caret_blink_speed = 0.65

[node name="methodParams" type="TextEdit" parent="."]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 7.0
margin/top = 59.0
margin/right = 380.0
margin/bottom = 96.0
show_line_numbers = false
highlight_all_occurrences = false
caret/block_caret = false
caret/caret_blink = false
caret/caret_blink_speed = 0.65

[node name="titleMethodName" type="Label" parent="."]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 0.0
margin/top = 3.0
margin/right = 91.0
margin/bottom = 17.0
text = "Method Name"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="titleParams" type="Label" parent="."]

hint/tooltip = "Only number of paramaters will be taken into account during validation"
focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 0.0
margin/top = 44.0
margin/right = 91.0
margin/bottom = 58.0
text = "Parameters (separate with comma)"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="SaveBtn" type="Button" parent="."]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 210.0
margin/top = 100.0
margin/right = 278.0
margin/bottom = 132.0
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
text = "Save"
flat = false

[node name="cancelBtn" type="Button" parent="."]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 120.0
margin/top = 100.0
margin/right = 188.0
margin/bottom = 132.0
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
text = "Cancel"
flat = false

[connection signal="pressed" from="SaveBtn" to="." method="_on_SaveBtn_pressed"]

[connection signal="pressed" from="cancelBtn" to="." method="_on_cancelBtn_pressed"]


